# actual-budget-client

./: .gitignore  README.md  check_categories.py  create_categories.py  docker-compose.yml  fix_opening_balance.py  import_all_statements.py  import_detailed.py  pdf_reader_ocr.py  pyproject.toml  smart_categorize_transactions.py  verify_pdf_extraction.py
actual-data/: .migrate
actual-data/server-files/: account.sqlite
actual-data/user-files/: file-00454b81-b33a-4bff-bd5e-7f7c4a8bbab0.blob
test/: test_all_detailed.py  test_all_pdfs.py  test_extraction.py
utils/: categorize_imported.py  categorize_transactions.py  clear_transactions.py  smart_categorize.py
v1_deprecated/: README.md  extracted_tables.json  output.json  pdf_reader.py  pdf_reader_llm.py  pdf_reder_backup.py  test_pymupdf.py
v2_deprecated/: import_statement.py  main.py
